--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "MIT",
   "devDependencies": {
     "lite-server": "2.4.0",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
+    "ganache-cli": "^6.12.2",
     "openzeppelin-solidity": "^2.2.0",
     "solc": "^0.5.2",
     "solc-js": "^0.5.2"
